fix patch Wrapping/Marking

--- a/css/styles.css
+++ b/css/styles.css
@@ -376,9 +376,6 @@ img {
 }
 
 .hero-section .container {
-  max-width: 320px;
-  margin: 0 auto;
-
   display: flex;
   flex-direction: column;
   gap: 72px;
@@ -441,7 +438,6 @@ img {
   }
 
   .hero-section .container {
-    max-width: 768px;
     gap: 36px;
   }
 
@@ -469,7 +465,6 @@ img {
   }
 
   .hero-section .container {
-    max-width: 1440px;
     gap: 48px;
   }
 
